--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=visual.TESTE
+main.class=visual.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
